--- a/app/src/main/res/layout/item_textview.xml
+++ b/app/src/main/res/layout/item_textview.xml
@@ -9,5 +9,6 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:padding="15dp"
+        android:background="?attr/selectableItemBackground"
         android:textSize="16sp" />
 </FrameLayout>
